fix: products on safari

--- a/assets/base.css
+++ b/assets/base.css
@@ -1266,7 +1266,7 @@ summary::-webkit-details-marker {
 }
 
 .media--transparent {
-  background-color: transparent;
+  /* background-color: transparent; */
 }
 
 .media > *:not(.zoom):not(.deferred-media__poster-button),
